bpk-lib/crates/macbat/macros/tests/trybuild_negative/projection_on_enum.stderr
error: expected a named-field struct
 --> tests/trybuild_negative/projection_on_enum.rs:5:6
  |
5 | enum P {
  |      ^
